force-app/main/default/objects/ReminderSetting__c/ReminderSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>督促設定</label>
</CustomObject>