force-app/main/default/objects/ReminderSetting__c/fields/ConfirmationReminderAddDays__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationReminderAddDays__c</fullName>
    <label>条件確認依頼書督促追加日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>