force-app/main/default/objects/ReminderSetting__c/fields/EstimateReminderAddDays__c.field-meta.xml
<CustomField>
    <fullName>EstimateReminderAddDays__c</fullName>
    <label>見積督促追加日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>