force-app/main/default/objects/ReminderSetting__c/fields/FirstEstimateReminderAddDays__c.field-meta.xml
<CustomField>
    <fullName>FirstEstimateReminderAddDays__c</fullName>
    <label>初回見積督促追加日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>