force-app/main/default/objects/ReminderSetting__c/fields/IsDepositRefundAutoReminder__c.field-meta.xml
<CustomField>
    <fullName>IsDepositRefundAutoReminder__c</fullName>
    <label>敷金返金自動督促対象フラグ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>